fix(ffe-cards): wrong margin bottom cards

--- a/packages/ffe-cards/less/common-card-styling.less
+++ b/packages/ffe-cards/less/common-card-styling.less
@@ -1,7 +1,7 @@
 .common-card-styling() {
     background: var(--ffe-v-cards-common-card-background-color);
     box-shadow: var(--ffe-v-cards-common-card-box-shadow);
-    margin: 0 0 var(--ffe-spacing-2xs);
+    margin: 0 0 var(--ffe-spacing-xs);
     border: 2px solid var(--ffe-v-cards-common-card-border-color);
     border-radius: var(--ffe-v-cards-common-card-border-radius);
     transition: all var(--ffe-transition-duration) var(--ffe-ease);
